<resources>
    <string name="app_name">Swch 2</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="view_more">View more</string>
    <string name="welcome">Welcome</string>
    <string name="your_account">Your account</string>
    <string name="your_circles">Your circles</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="night_clubs">Night clubs near you</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="dot">·</string>
    <string name="bars_and_rest">Bars &amp; restaurants</string>
    <string name="might_like">You might like</string>
</resources>