<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_event_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_swch" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:background="@drawable/colorprimary_gradient_bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="@dimen/medium"
        android:paddingTop="@dimen/larger"
        android:paddingEnd="@dimen/medium"
        android:paddingBottom="@dimen/small">

        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sofia_pro"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_big1"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ll_location" />

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/cv_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sofia_pro"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:fontFamily="@font/sofia_pro"
                android:maxLines="1"
                android:text="@string/dot"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_big2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sofia_pro"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text000" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="@dimen/smaller"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/smaller"
                android:layout_marginEnd="@dimen/medium"
                android:layout_marginBottom="@dimen/smaller"
                android:drawableStart="@drawable/ic_info"
                android:drawablePadding="@dimen/small"
                android:fontFamily="@font/sofia_pro"
                android:text="@string/view_more"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text00" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/colorprimary_gradient_top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofia_pro"
            android:src="@mipmap/ic_launcher_foreground"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_big3"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
